--- a/css/global.css
+++ b/css/global.css
@@ -29,6 +29,11 @@
     text-shadow: 1px 1px black;
 }
 
+.dropShadow {
+    -webkit-filter: drop-shadow(1px 1px 1px black);
+    filter: drop-shadow(1px 1px 1px black);
+}
+
 *,
 *::before,
 *::after {
