--- a/css/resume.css
+++ b/css/resume.css
@@ -76,9 +76,10 @@ a>.img-fluid:hover {
 }
 
 #yodaJim {
+    width: 25rem;
     opacity: 0 !important;
     transition: all 0.25s ease-in-out;
-    transform: translateY(100px);
+    transform: translateY(3rem);
     border-radius: 25%;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
