contact welcome botNav

--- a/css/contact.css
+++ b/css/contact.css
@@ -228,6 +228,10 @@ input {
     border-color: transparent !important;
 }
 
+#buttonResume {
+    z-index: 10;
+}
+
 #googleMap {
     background-color: transparent;
     box-shadow: none;
@@ -236,7 +240,6 @@ input {
 }
 
 #googleMap>iframe {
-    max-width: 80vw;
     max-width: 80vw;
     opacity: 0.9;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
