--- a/css/projects.css
+++ b/css/projects.css
@@ -38,14 +38,8 @@ h5 {
   line-height: 1;
 }
 
-#myProjects {
+.myProjects {
   max-width: 1400px;
-  justify-content: space-between;
-  display: flex;
-}
-
-#myProjects2 {
-  max-width: 1200px;
   justify-content: space-between;
   display: flex;
 }
