--- a/css/global.css
+++ b/css/global.css
@@ -80,13 +80,13 @@ a:focus {
     transform: scale(1.05);
 }
 
-img {
+/* img {
     transition: all 0.25s ease-in-out
 }
 
 img:hover{
     transform: translateY(-0.25rem);
-}
+} */
 
 #githubContributions {
     width: 100%;
