--- a/css/welcome.css
+++ b/css/welcome.css
@@ -122,7 +122,6 @@ body {
     filter: drop-shadow(1px 1px 1px black);
 }
 
-
 .card {
     transition: all 1s ease-in-out;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -139,6 +138,15 @@ body {
 .shift {
     transform: scale(1) !important;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px !important;
+}
+
+#qrByPete {
+    transition: all 0.5s ease-in-out;
+    transform: translateY(2rem);
+}
+
+#qrByPete.shift {
+    transform: translateY(0);
 }
 
 #carousel {
