--- a/css/projects.css
+++ b/css/projects.css
@@ -28,7 +28,7 @@ h5 {
 }
 
 #sortBox {
-    margin: 1rem auto;
+    margin: 2rem auto;
     width: fit-content;
     padding: 1rem;
 }
@@ -39,7 +39,7 @@ h5 {
     background-color: transparent;
     padding: 0.25rem 0.5rem;
     border: none;
-    color: silver;
+    color: gray;
     border: 1px solid transparent;
     text-shadow: 1px 1px 1px black;
 }
