--- a/css/projects.css
+++ b/css/projects.css
@@ -34,22 +34,35 @@ h5 {
 }
 
 #sortButtons>button {
-    margin: 0.5rem auto;
-    border-radius: 2px;
+    margin: 0 -0.125rem;
     transition: all 0.25s ease-in-out;
-    background-color: transparent;
+    background-color: black;
     padding: 0.5rem 0;
     width: 6rem;
-    border: none;
     color: gray;
     border: 1px solid transparent;
     text-shadow: 1px 1px 1px black;
+}
+
+@media (max-width:350px) {
+    #sortButtons>button {
+        width: 5rem;
+        font-size: smaller;
+    }
+}
+
+@media (max-width:300px) {
+    #sortButtons>button {
+        width: 4rem;
+        font-size: smaller;
+    }
 }
 
 #sortButtons>button:hover,
 #sortButtons>button.active {
     color: lime;  
     text-shadow: none;
+    background-color: transparent;
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
