drop shad silver

--- a/css/global.css
+++ b/css/global.css
@@ -47,6 +47,11 @@
     filter: drop-shadow(1px 1px 1px white);
 }
 
+.dropShadowSilver {
+    -webkit-filter: drop-shadow(1px 1px 1px silver);
+    filter: drop-shadow(1px 1px 1px silver);
+}
+
 *,
 *::before,
 *::after {
