--- a/css/global.css
+++ b/css/global.css
@@ -116,8 +116,9 @@ a:focus {
 
 #carousel {
     z-index: 1;
-    margin: 4rem 0 1rem 0;
+    margin: 4rem auto 1rem auto;
     width: 100vw;
+    max-width: 1400px;
     background-color: rgb(50, 50, 50);
 }
 
