--- a/css/global.css
+++ b/css/global.css
@@ -52,6 +52,11 @@
     filter: drop-shadow(1px 1px 1px silver);
 }
 
+.dropShadowSilverBig {
+    -webkit-filter: drop-shadow(2px 2px 2px silver);
+    filter: drop-shadow(2px 2px 2px silver);
+}
+
 *,
 *::before,
 *::after {
