--- a/css/global.css
+++ b/css/global.css
@@ -91,8 +91,8 @@ a:visited {
 
 a:hover,
 a:focus {
-    text-decoration: underline;
-    transform: scale(1.05);
+    /* text-decoration: underline; */
+    color: cornflowerblue;
 }
 
 #githubContributions {
