--- a/css/navbar.css
+++ b/css/navbar.css
@@ -32,19 +32,19 @@
 .nav-link {
     transition: all 0.25s ease-in-out;
     font-family: Menlo Regular;
+    border-bottom: 1px solid transparent;
 }
 
 .active {
     border-bottom: 1px solid white;
-    margin-bottom: -1px;
 }
 
 .nav-link:hover {
     border-bottom: 1px solid lime;
-    margin-bottom: -1px;
     color: lime !important;
     opacity: 1;
     text-decoration: none;
+    transform: scale(1.05) translateY(1px);
 }
 
 .navbar>div>h3 {
@@ -59,7 +59,6 @@
 }
 
 .navbar-toggler>img:hover {
-    /* animation: logoWiggle 5s infinite ease-in-out; */
     animation: spinFaster 2s ease-in-out infinite;
 }
 
