--- a/css/blog.css
+++ b/css/blog.css
@@ -46,8 +46,7 @@ ol {
 }
 
 .myArticles {
-  margin: 2rem auto;
-  padding: 1rem;
+  margin: 0 auto;
   color: silver;
   border-radius: 0.25rem;
   background-color: transparent;
