--- a/css/blog.css
+++ b/css/blog.css
@@ -78,6 +78,11 @@ ol {
     box-shadow: lime 0px 5px 15px;
 }
 
+#buttonWithImage:hover {
+    background-color: transparent;
+    border: 1px solid transparent;
+}
+
 #blog9ReactLogo {
     animation: slowspin 20s infinite linear;
 }
