--- a/css/footer.css
+++ b/css/footer.css
@@ -52,27 +52,27 @@
 @keyframes wiggle {
     4% {
         transform: rotateZ(0deg);
-        opacity: 0.5;
+        /* opacity: 0.5; */
     }
     5% {
         transform: rotateZ(10deg);
-        opacity: 0.5;
+        /* opacity: 0.5; */
     }
     10% {
         transform: rotateZ(-10deg);
-        opacity: 0.5;
+        /* opacity: 0.5; */
     }
     11% {
         transform: rotateZ(0deg);
-        opacity: 0.5;
+        /* opacity: 0.5; */
     }
     16% {
         transform: scale(1.1);
-        opacity: 1;
+        /* opacity: 1; */
     }
     21% {
         transform: scale(1);
-        opacity: 0.5;
+        /* opacity: 0.5; */
     }
 }
 
