publish blog13, fix blog9 alt text

--- a/css/blog.css
+++ b/css/blog.css
@@ -83,7 +83,8 @@ ol {
     border: 1px solid transparent;
 }
 
-#blog9ReactLogo {
+#blog9ReactLogo,
+#blog13ReactLogo {
     animation: slowspin 20s infinite linear;
 }
 
